
<resources>
    <string name="app_name">Motivation</string>
    <string name="infinity_icon">infinity_icon</string>
    <string name="bubble_icon">bubble_icon</string>
    <string name="sun_icon">sun_icon</string>
    <string name="hello_name">Olá, Kotlin!</string>
    <string name="motivation_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="new_phrase">nova frase</string>
    <string name="lets_start">Vamos começar?</string>
    <string name="what_is_your_name">Qual seu nome?</string>
    <string name="save">salvar</string>
    <string name="invalid_name">nome inválido.</string>
</resources>