<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet_primary"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        >

        <ImageView
            android:id="@+id/image_infinity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/infinity_icon"
            android:src="@drawable/ic_all_inclusive"
            android:minWidth="40dp"
            android:minHeight="40dp"
            app:tint="@color/violet_secondary"
            android:layout_weight="1"

            />
        <ImageView
            android:id="@+id/image_bubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bubble_icon"
            android:src="@drawable/ic_bubble"
            android:minWidth="40dp"
            android:minHeight="40dp"
            app:tint="@color/violet_secondary"
            android:layout_weight="1"

            />
        <ImageView
            android:id="@+id/image_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sun_icon"
            android:src="@drawable/ic_sun"
            android:minWidth="40dp"
            app:tint="@color/violet_secondary"
            android:minHeight="40dp"
            android:layout_weight="1"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cabin"
        android:text="@string/hello_name"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:text="@string/motivation_text"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textSize="22sp" />

    <View
        android:layout_width="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_height="3dp"
        android:elevation="5dp"
        android:background="#3F51B5"
        android:layout_below="@id/text_motivation"
        />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/new_phrase"
        android:textColor="@color/white"
        android:textAllCaps="true"
        />

</RelativeLayout>