<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet_secondary"
    tools:context=".ui.UserActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/cabin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:hint="@string/what_is_your_name"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/cabin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text|textPersonName" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32sp"
        android:backgroundTint="@color/violet_primary"
        android:fontFamily="@font/cabin"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>